# fastapi-sqlalchemy-async

./: LICENSE  README.md  async_db_alter.py  docker-compose.yml  http_async.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4626b1bef383_create_book_table.py  54f0bfeb6001_create_store_table.py
source/: main.py
source/core/: config.py
source/crud/: crud_book.py  crud_store.py
source/db/: __init__.py  dependencies.py
source/db/models/: books.py  stores.py
source/endpoints/: books.py  stores.py
source/schemas/: books.py  stores.py
