[tool.poetry]
name = "fastapi-sqlalchemy-async"
version = "0.1.0"
description = ""
authors = ["Yanbo Huang <yanbo.huang@pm.me"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
alembic = "^1.11.1"
asyncpg = "^0.27.0"
aiosqlite = "^0.19.0"
psycopg2 = "^2.9.6"
aiohttp = "^3.8.4"
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.16"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
