[tool.poetry]
name = "fastapi-sqlalchemy-async"
version = "0.1.0"
description = ""
authors = ["Yanbo Huang <yanbo.huang@pm.me"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
alembic = "^1.11.1"
aiosqlite = "^0.19.0"
aiohttp = "^3.8.4"
requests = "^2.31.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.16"}
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
